# VoiceToText

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  compare_models.py  dictate.py  live.py  voice-to-text.desktop
src/: audio.rs  audio_duck.rs  config.rs  dbus_service.rs  hotkey.rs  main.rs  mic_mute.rs  output.rs  settings.rs  transcribe.rs  transcript.rs  tray.rs  vad.rs
