[package]
name = "voice-to-text"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "System-wide voice-to-text dictation tool for Linux"

[dependencies]
whisper-rs = "0.13"
cpal = "0.15"
crossbeam-channel = "0.5"
arboard = "3"
tray-icon = "0.19"
muda = "0.15"
zbus = "4"
ureq = "2"
ten-vad-rs = "0.1.5"
gtk = "0.18"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
global-hotkey = "0.7"
png = "0.17"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
evdev = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
